--- a/chongWuKongJing/app/src/main/res/values/strings.xml
+++ b/chongWuKongJing/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">chongWuKongJing</string>
+    <string name="rule_text">0123456789abcdefghijklmnopqrstuvwxyz
+ABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;</string>
+    <string name="connection_code">密码</string>
+    <string name="me">我的资料</string>
+    <string name="index">首页</string>
+
 </resources>
