--- a/chongWuKongJing/app/src/main/res/values/strings.xml
+++ b/chongWuKongJing/app/src/main/res/values/strings.xml
@@ -6,5 +6,8 @@ ABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#03
     <string name="me">我的资料</string>
     <string name="index">首页</string>
     <string name="loading_login">正在登录</string>
+    <string name="fengli">风力</string>
+    <string name="kaiguan">开/关</string>
+    <string name="dingshi">定时</string>
 
 </resources>
