--- a/chongWuKongJing/app/src/main/res/values/strings.xml
+++ b/chongWuKongJing/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">宠物空净</string>
+    <string name="app_name">INTERLINX</string>
     <string name="rule_text">0123456789abcdefghijklmnopqrstuvwxyz
 ABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;</string>
     <string name="connection_code">密码</string>
